--- a/opstax-design-system.html
+++ b/opstax-design-system.html
@@ -6,7 +6,7 @@
 		<title>Opstax Design System</title>
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Source+Sans+Pro:wght@400;600&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600&family=Source+Sans+Pro:wght@400;600&family=Ubuntu:wght@500&display=swap"
 			rel="stylesheet"
 		/>
 		<!-- GLOBAL STYLE -->
@@ -33,8 +33,8 @@
 				font-size: 1.625em;
 			}
 			h2 {
-				font-family: "Mulish", sans-serif;
-				font-weight: 400;
+				font-family: "Ubuntu", sans-serif;
+				font-weight: 500;
 				font-size: 5.625em;
 			}
 			h3 {
@@ -288,7 +288,7 @@
 	<body>
 		<div class="typography">
 			<h1 class="orange">H1 : Mulish Bold</h1>
-			<h2>H2 : Mulish Regular</h2>
+			<h2>H2 : Ubuntu Medium</h2>
 			<h3 class="orange">H3 : Mulish Semibold</h3>
 			<p>Body : Source Sans Pro Regular</p>
 			<p class="subTitle">Body Subtitle : Source Sans Pro Semibold</p>
